[package]
name = "co-primitives"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "COKIT Primitives used throughout the `co-sdk` and `co-api` and Core implementations."

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
bloomfilter = { version = "3.0.1", default-features = false }
cid = { workspace = true }
co-macros = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
ipld-dagpb = { workspace = true }
multihash = { workspace = true }
multihash-codetable = { workspace = true }
num-rational = { workspace = true }
ordered-float = "4.6.0"
pin-project = { workspace = true }
rust-unixfs = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_ipld_dagjson = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true, default-features = false }
tokio-util = { workspace = true, features = ["compat"] }
unsigned-varint = "0.8.0"
zeroize = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
insta = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }

[features]
default = []
benchmarking = []

[[bench]]
name = "lsm_tree_map"
harness = false
required-features = ["benchmarking"]
