[package]
name = "co-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-api = { workspace = true }
co-primitives = { workspace = true }
co-storage = { workspace = true }
colored = "2.1.0"
derive_more = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
rust-unixfs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_repr = { workspace = true }
target-lexicon = "0.12"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-stream = { workspace = true, default-features = false, optional = true }
tracing = { workspace = true }
uuid = { workspace = true }
wasmer = { path = "/Users/dominik/Workspaces/github/wasmerio/wasmer/lib/api", default-features = false }
wasmer-compiler = { path = "/Users/dominik/Workspaces/github/wasmerio/wasmer/lib/compiler", optional = true }
wasmer-compiler-cranelift = { path = "/Users/dominik/Workspaces/github/wasmerio/wasmer/lib/compiler-cranelift", optional = true }
wasmer-compiler-llvm = { path = "/Users/dominik/Workspaces/github/wasmerio/wasmer/lib/compiler-llvm", optional = true }
wasmer-types = { path = "/Users/dominik/Workspaces/github/wasmerio/wasmer/lib/types" }

[dev-dependencies]
hexdump = "0.1.1"
insta = { version = "1.34.0", features = ["default", "yaml"] }
tracing-subscriber = { workspace = true }
wasmer = { path = "/Users/dominik/Workspaces/github/wasmerio/wasmer/lib/api" }

[features]
default = []
native = ["wasmer/compiler", "fs", "tokio/rt"]
web = ["uuid/js", "js", "co-storage/web"]
fs = []

# backends
llvm = ["wasmer/llvm", "dep:wasmer-compiler", "dep:wasmer-compiler-llvm"]
cranelift = ["wasmer/cranelift", "dep:wasmer-compiler", "dep:wasmer-compiler-cranelift"]
wasmi = ["wasmer/wasmi"]
wamr = ["wasmer/wamr"]
js = ["wasmer/js-default"]

# meta
apple-sandbox = ["wasmi"]
