[package]
name = "co-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-actor = { workspace = true }
co-api = { workspace = true }
co-primitives = { workspace = true }
co-storage = { workspace = true }
colored = "2.1.0"
derive_more = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
rust-unixfs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_repr = { workspace = true }
target-lexicon = "0.12"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-stream = { workspace = true, default-features = false, optional = true }
tracing = { workspace = true }
uuid = { workspace = true }
wasmer = { git = "https://github.com/wasmerio/wasmer.git", branch = "main", default-features = false }
wasmer-compiler = { git = "https://github.com/wasmerio/wasmer.git", branch = "main", optional = true }
wasmer-compiler-cranelift = { git = "https://github.com/wasmerio/wasmer.git", branch = "main", optional = true }
wasmer-compiler-llvm = { git = "https://github.com/wasmerio/wasmer.git", branch = "main", optional = true }
wasmer-types = { git = "https://github.com/wasmerio/wasmer.git", branch = "main" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { git = "https://github.com/wasmerio/wasmer.git", branch = "main", default-features = false, features = ["js", "std", "wasm-types-polyfill", "js-serializable-module", "enable-serde"] }

[dev-dependencies]
hexdump = "0.1.1"
insta = { version = "1.34.0", features = ["default", "yaml"] }
tracing-subscriber = { workspace = true }
wasmer = { git = "https://github.com/wasmerio/wasmer.git", branch = "main" }

[features]
default = []
native = ["fs", "tokio/rt", "co-actor/native"]
web = ["uuid/js", "js", "co-storage/web", ]
fs = []

# backends
headless = ["wasmer/headless", "wasmer/compiler"]
llvm = ["wasmer/llvm", "wasmer/compiler", "dep:wasmer-compiler", "dep:wasmer-compiler-llvm"]
cranelift = ["wasmer/cranelift", "wasmer/compiler", "dep:wasmer-compiler", "dep:wasmer-compiler-cranelift"]
wasmi = ["wasmer/wasmi"]
wamr = ["wasmer/wamr"]
js = ["co-actor/js"]

# meta
apple-sandbox = ["wasmi"]
