[package]
name = "co-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "COKIT WebAssembly Runtime to execute Cores (CO State Reducers)."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-actor = { workspace = true }
co-api = { workspace = true }
co-primitives = { workspace = true }
co-storage = { workspace = true }
colored = "2.1.0"
derive_more = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
rust-unixfs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_repr = { workspace = true }
target-lexicon = "0.12"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-stream = { workspace = true, default-features = false, optional = true }
tracing = { workspace = true }
uuid = { workspace = true }
wasmer = { version = "7.1.0", default-features = false, optional = true }
wasmer-compiler = { version = "7.1.0", optional = true }
wasmer-compiler-cranelift = { version = "7.1.0", optional = true }
wasmer-compiler-llvm = { version = "7.1.0", optional = true }
wasmer-types = { version = "7.1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { version = "7.1.0", default-features = false, features = ["js", "std", "wasm-types-polyfill", "js-serializable-module", "enable-serde"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
wasmer = { version = "7.1.0", default-features = false, optional = true, features = ["jsc", "std"] }

[dev-dependencies]
hexdump = "0.1.1"
insta = { version = "1.34.0", features = ["default", "yaml"] }
tracing-subscriber = { workspace = true }
wasmer = { version = "7.1.0" }

[features]
default = []
native = ["fs", "tokio/rt", "co-storage/native"]
web = ["uuid/js", "js", "co-actor/js", "co-storage/web", "co-actor/web"]
fs = []

# backends
headless = ["wasmer/headless", "wasmer/compiler", "dep:wasmer-types"]
llvm = ["wasmer/llvm", "wasmer/compiler", "dep:wasmer-types", "dep:wasmer-compiler", "dep:wasmer-compiler-llvm"]
cranelift = ["wasmer/cranelift", "wasmer/compiler", "dep:wasmer-types", "dep:wasmer-compiler", "dep:wasmer-compiler-cranelift"]
wasmi = ["wasmer/wasmi"]
wamr = ["wasmer/wamr"]
js = [] # for js we explicitly only pull wasmer for wasm32
jsc = ["dep:wasmer"]

# meta
apple-sandbox = ["wasmi"]
