[package]
name = "co-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
#librocksdb-sys = { version = "0.10.0+7.9.2" }
#rocksdb = { version = "0.20.1" }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-actor = { path = "../co-actor" }
co-core-co = { path = "../cores/co" }
co-core-data-series = { path = "../cores/data-series" }
co-core-file = { path = "../cores/file" }
co-core-keystore = { path = "../cores/keystore" }
co-core-membership = { path = "../cores/membership" }
co-core-pin = { path = "../cores/pin" }
co-core-role = { path = "../cores/role" }
co-core-room = { path = "../cores/room" }
co-core-storage = { path = "../cores/storage" }
co-identity = { path = "../co-identity" }
co-log = { path = "../co-log" }
co-network = { path = "../co-network" }
co-primitives = { path = "../co-primitives" }
co-runtime = { path = "../co-runtime" }
co-storage = { path = "../co-storage" }
derive_more = { workspace = true }
directories = "5.0.1"
futures = { workspace = true }
futures-util = { workspace = true }
hmac = "0.12.1"
hyper = { workspace = true }
ipld-core = { workspace = true }
keyring = "2.3.2"
libc = "0.2"
libp2p = { workspace = true, features = ["rendezvous", "tokio"] }
multibase = "0.9.1"
names = "0.14.0"
nix = { version = "0.29.0", features = ["fs"] }
notify = { version = "7.0.0", features = ["macos_kqueue"] }
pin-project = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
sha2 = "0.10.8"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3.6"
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

# opentelemetry
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
tracing-opentelemetry = "0.23"

[dev-dependencies]
example-counter = { path = "../examples/counter" }

[features]
"default" = ["pinning"]
"pinning" = []
"logging-verbose" = ["co-storage/logging-verbose"]
