[package]
name = "co-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
#librocksdb-sys = { version = "0.10.0+7.9.2" }
#rocksdb = { version = "0.20.1" }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-actor = { workspace = true }
co-core-board = { workspace = true }
co-core-co = { workspace = true }
co-core-data-series = { workspace = true }
co-core-file = { workspace = true }
co-core-keystore = { workspace = true }
co-core-membership = { workspace = true }
co-core-pin = { workspace = true }
co-core-poa = { workspace = true }
co-core-rich-text = { workspace = true }
co-core-role = { workspace = true }
co-core-room = { workspace = true }
co-core-storage = { workspace = true }
co-identity = { workspace = true }
co-log = { workspace = true }
co-network = { workspace = true }
co-primitives = { workspace = true }
co-runtime = { workspace = true }
co-storage = { workspace = true }
derive_more = { workspace = true }
directories = "5.0.1"
either = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hmac = "0.12.1"
hyper = { workspace = true }
indexmap = "2.9.0"
ipld-core = { workspace = true }
keyring = "2.3.2"
libc = "0.2"
multibase = { workspace = true }
names = "0.14.0"
nix = { version = "0.29.0", features = ["fs"] }
notify = { version = "7.0.0", features = ["macos_kqueue"] }
pin-project = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
sha2 = "0.10.8"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

# opentelemetry
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
tracing-opentelemetry = "0.23"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
example-counter = { path = "../examples/counter" }
example-counter-upgraded = { path = "../examples/counter-upgraded" }
tokio = { workspace = true, features = ["full", "tracing"] }
console-subscriber = { version = "0.4.1" }

[features]
"default" = ["recommended", "co-runtime/llvm"]

# Meta: Recommended platform neutral features
"recommended" = ["pinning"]

# Meta: Enable to run in a apple sandbox.
"apple-sandbox" = ["co-runtime/apple-sandbox"]

# Enable pinning (co-core-storage) feature.
"pinning" = []

# Enable very verbose logging which may has security implications. Only use in development.
"logging-verbose" = ["co-storage/logging-verbose"]

[[bench]]
name = "local_push"
harness = false
