[package]
name = "co-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
#librocksdb-sys = { version = "0.10.0+7.9.2" }
#rocksdb = { version = "0.20.1" }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
cid = { workspace = true }
co-actor = { workspace = true }
co-core-board = { workspace = true }
co-core-co = { workspace = true }
co-core-data-series = { workspace = true }
co-core-file = { workspace = true }
co-core-keystore = { workspace = true }
co-core-membership = { workspace = true }
co-core-pin = { workspace = true }
co-core-poa = { workspace = true }
co-core-rich-text = { workspace = true }
co-core-role = { workspace = true }
co-core-room = { workspace = true }
co-core-storage = { workspace = true }
co-identity = { workspace = true }
co-log = { workspace = true }
co-network = { workspace = true, optional = true }
co-primitives = { workspace = true }
co-runtime = { workspace = true }
co-storage = { workspace = true }
derive_more = { workspace = true }
directories = "5.0.1"
either = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hmac = "0.12.1"
indexmap = "2.9.0"
ipld-core = { workspace = true }
js-sys = { workspace = true, optional = true }
keyring = { version = "2.3.2", optional = true }
libc = "0.2"
multibase = { workspace = true }
names = "0.14.0"
nix = { version = "0.29.0", optional = true, features = ["fs"] }
notify = { version = "7.0.0", optional = true, features = ["macos_kqueue"] }
pin-project = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
sha2 = "0.10.8"
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "io-util"] }
tokio-stream = { workspace = true, default-features = false, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true, optional = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter"] }
uuid = { workspace = true }
wasm-bindgen-futures = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# opentelemetry
opentelemetry = { version = "0.22", optional = true }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"], optional = true}
opentelemetry-semantic-conventions = { version = "0.14.0", optional = true }
opentelemetry-stdout = { version = "0.3.0", features = ["trace"], optional = true }
tracing-opentelemetry = { version = "0.23", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
example-counter = { path = "../examples/counter" }
example-counter-upgraded = { path = "../examples/counter-upgraded" }
tokio = { workspace = true, features = ["full", "tracing"] }
co-test = { workspace = true }

[features]
"default" = ["recommended", "co-runtime/llvm"]

# Meta: Recommended platform neutral features
"recommended" = ["pinning", "native", "network", "bunyan"]

# Meta: Enable to run in a apple sandbox.
"apple-sandbox" = ["co-runtime/apple-sandbox"]

# Enable pinning (co-core-storage) feature.
"pinning" = []

# Enable very verbose logging which may has security implications. Only use in development.
"logging-verbose" = ["co-storage/logging-verbose"]

# Bundle WASM binaries instead of native for build-in cores.
# Note: Assumes cores are pre-built and compressed using zst.
"bundle-wasm-cores" = ["dep:zstd"]

# Enable filesystem access
"fs" = ["co-storage/fs", "co-runtime/fs", "dep:notify", "dep:nix"]

# Enable keychain access
"keychain" = ["dep:keyring"]

# Enable libp2p networking
"network" = ["dep:co-network"]

# Enable JS features
"js" = ["dep:wasm-bindgen-futures", "dep:js-sys", "uuid/js", "co-runtime/js", "co-actor/js", "co-storage/js"]

# Enable opentelemetry tracing
"opentelemetry" = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:opentelemetry-stdout", "dep:tracing-opentelemetry"]

# Enable bunyan formatter
"bunyan" = ["dep:tracing-bunyan-formatter"]

# Enable tracing
"tracing" = ["dep:tracing-subscriber"]

# Native Target
"native" = ["co-runtime/native", "co-actor/native", "co-storage/native", "fs", "tokio/full", "tracing"]

# Web Target (WASM)
"web" = ["js", "co-identity/web", "co-storage/web", "co-runtime/web"]

[[bench]]
name = "local_push"
harness = false

[[bench]]
name = "shared_push"
harness = false
