[package]
name = "co-storage"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
aead = { version = "0.5.2", features = ["stream"] }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
blake3 = "=1.5.0"
chacha20poly1305 = "=0.10.1"
cid = { workspace = true }
co-actor = { path = "../co-actor" }
co-primitives = { path = "../co-primitives" }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
ipld-core = { workspace = true }
ipld-dagpb = { workspace = true }
multihash = { workspace = true }
multihash-codetable = { workspace = true }
names = "0.14.0"
rust-unixfs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_ipld_dagjson = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "rt"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hexdump = "0.1.1"
insta = { version = "1.34.0", features = ["default", "yaml"] }
tracing-subscriber = { workspace = true }
