[package]
name = "co-storage"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
aead = { version = "0.5.2", features = ["stream"] }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
blake3 = "=1.5.0"
chacha20poly1305 = "=0.10.1"
cid = { workspace = true }
co-actor = { workspace = true }
co-primitives = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
getrandom = { version = "0.2", optional = true, default-features = false }
ipld-core = { workspace = true }
ipld-dagpb = { workspace = true }
multihash = { workspace = true }
multihash-codetable = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_ipld_dagjson = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, default-features = false }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hexdump = "0.1.1"
insta = { version = "1.34.0", features = ["default", "yaml"] }
tracing-subscriber = { workspace = true }
co-test = { workspace = true }

[features]
default = []
logging-verbose = []
"fs" = ["tokio/fs"]
"web" = ["uuid/js", "getrandom/js"]
