[package]
name = "co-storage"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
aead = { version = "0.5.2", features = ["stream"] }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
blake3 = "=1.5.0"
chacha20poly1305 = "=0.10.1"
cid = { workspace = true }
co-actor = { workspace = true, optional = true }
co-primitives = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
getrandom = { version = "0.2", optional = true, default-features = false }
ipld-core = { workspace = true }
ipld-dagpb = { workspace = true }
js-sys = { workspace = true, optional = true }
multihash = { workspace = true }
multihash-codetable = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_ipld_dagjson = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, default-features = false }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["DomException", "DomStringList", "Event", "EventTarget", "IdbDatabase", "IdbFactory", "IdbObjectStore", "IdbOpenDbRequest", "IdbRequest", "IdbTransaction", "IdbTransactionMode", "Window"] }

[dev-dependencies]
hexdump = "0.1.1"
insta = { version = "1.34.0", features = ["default", "yaml"] }
tracing-subscriber = { workspace = true }
co-test = { workspace = true }

[features]
default = []
logging-verbose = []
fs = ["tokio/fs", "tokio/io-util"]
web = ["js", "overlay", "co-actor/web"]
native = ["fs", "overlay", "co-actor/native"]
js = ["uuid/js", "getrandom/js", "co-actor/js"]

# backends
indexeddb = ["js", "dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:co-actor"]
overlay = ["dep:co-actor"]
