[package]
name = "co-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.76"

[dependencies]
co-primitives = { path = "../co-primitives" }
co-messaging = { path = "../co-messaging" }
co-sdk = { path = "../co-sdk", features = ["tokio-runtime"] }
co-core-membership = { path = "../cores/membership" }
co-core-co = { path = "../cores/co" }
co-core-room = { path = "../cores/room" }
co-log = { path = "../co-log" }
anyhow = { workspace = true }
futures = { workspace = true }
libipld = { workspace = true }
tauri = { version = "2.0.0-beta", default-features = false }
tauri-plugin-shell = "2.0.0-beta"
tauri-utils = { version = "2.0.0-beta" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
