[package]
name = "co-test"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
license = "AGPL-3.0-only"
homepage = "https://www.cokit.org"
repository = "https://github.com/1iolabs/cokit.git"
documentation = "https://www.cokit.org/docs/"
description = "COKIT testing fixtures."

[dependencies]
anyhow = { workspace = true }
uuid = { workspace = true }
