[package]
name = "co-wasm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
libipld = { workspace = true, features = ["default", "serde-codec"] }
names = "0.14.0"
rxrust = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["macros"] }
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true }
uuid = { version = "1.2.2", features = ["default", "v4"] }
