[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tower-http = { version = "0.3", features = ["default", "add-extension"] }
anyhow = { workspace = true }
axum = "0.6.1"
axum-macros = "0.3.1"
co-sdk = { path = "../sdk", features = ["tokio-runtime"] }
co-state = { path = "../state", features = ["tokio-runtime"] }
futures = { workspace = true }
hyper = { workspace = true }
libipld = { workspace = true, features = ["default", "serde-codec"] }
libp2p = { workspace = true, features = ["rendezvous"] }
rxrust = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3.6"
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
"default" = ["tokio-runtime"]
"tokio-runtime" = ["tokio"]
"futures-runtime" = []
