[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
# tower-http = { version = "0.3", features = ["default", "add-extension"] }
anyhow = { workspace = true }
axum = "0.6.1"
axum-macros = "0.3.1"
clap = { version = "^4.3.23", features = ["derive"] }
co-core-co = { path = "../cores/co" }
co-core-keystore = { path = "../cores/keystore" }
co-core-membership = { path = "../cores/membership" }
co-sdk = { path = "../co-sdk", features = ["tokio-runtime"] }
directories = "5.0.1"
futures = { workspace = true }
hyper = { workspace = true }
libipld = { workspace = true, features = ["default", "serde-codec"] }
libp2p = { workspace = true, features = ["rendezvous"] }
rxrust = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3.6"
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
"default" = ["tokio-runtime"]
"tokio-runtime" = ["tokio"]
"futures-runtime" = []
