[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
# tower-http = { version = "0.3", features = ["default", "add-extension"] }
anyhow = { workspace = true }
axum = "0.6.1"
axum-macros = "0.3.1"
cid = { workspace = true }
clap = { version = "^4.3.23", features = ["derive"] }
co-core-co = { workspace = true }
co-core-keystore = { workspace = true }
co-core-membership = { workspace = true }
co-sdk = { workspace = true }
directories = "5.0.1"
futures = { workspace = true }
hyper = { workspace = true }
ipld-core = { workspace = true }
libp2p = { workspace = true, features = ["rendezvous"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
"default" = []
