[package]
name = "did-co"
version = "0.1.0-dev"
description = "DID implementation of th Co method."
authors = ["dk"]
edition = "2021"
license = "Unlicense"
publish = false
repository = ""
rust-version = "1.88"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
did_url = "0.1.0"
serde = "1.0"
serde_json = "1.0"
