[package]
name = "network-co"
version = "0.1.0-dev"
description = "CO network protocols."
authors = ["dk"]
edition = "2021"
license = "Unlicense"
publish = false
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = { version = "0.11" }

[dependencies]
libp2p = { workspace = true, features = ["rendezvous"] }
serde = "1.0"
serde_json = "1.0"
async-trait = { workspace = true }
futures = { workspace = true }
rand = "0.8.5"

#prost = "0.11"
#prost-types = "0.11"
## ahhhh
#didcomm-rs = "0.7.2"
## dependency hell
#didcomm = "0.4"
#askar-crypto = "0.2.5"
#ecdsa = "0.14.4"
#signature = "1.6.4"
