[package]
name = "network-co"
version = "0.1.0-dev"
description = "CO network protocols."
authors = ["dk"]
edition = "2021"
license = "Unlicense"
publish = false
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = { version = "0.11" }

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true, features = ["full"] }
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true }

#prost = "0.11"
#prost-types = "0.11"
## ahhhh
#didcomm-rs = "0.7.2"
## dependency hell
#didcomm = "0.4"
#askar-crypto = "0.2.5"
#ecdsa = "0.14.4"
#signature = "1.6.4"
