[package]
name = "co-network"
version = "0.1.0-dev"
description = "CO network protocols."
authors = ["dk"]
edition = "2021"
license = "Unlicense"
publish = false
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = { version = "0.11" }

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
did_url = "^0.1"
did-key = "^0.2"
futures = { workspace = true }
libp2p = { workspace = true, features = ["full"] }
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tracing = { workspace = true }
uuid = { version = "1.2.2", features = ["default", "v4"] }

#prost = "0.11"
#prost-types = "0.11"
## ahhhh
#didcomm-rs = "0.7.2"
## dependency hell
#didcomm = "0.4"
#askar-crypto = "0.2.5"
#ecdsa = "0.14.4"
#signature = "1.6.4"
