[package]
name = "pallet-co"
version = "0.1.0-dev"
description = "FRAME pallet defining CO runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

anyhow = { version = "1.0.68", default-features = false }
cid = { version = "0.10.1", default-features = false }
libipld-core = { version = "0.16.0", default-features = false }
libipld-cbor = { version = "0.16.0", optional = true, default-features = false }
sp-ipld = { version = "0.2.0", default-features = false, features = [
	"dag-cbor",
] }
sp-cid = { version = "0.2.0" }
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }

sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42", default-features = false }

# multihash = { version = "0.18.0", default-features = false, features = ["sha2","multihash-impl",] }
# serde = { version = "1.0.116", default-features = false, features = ["derive"] }
# serde_ipld_dagcbor = { version = "0.3.0", default-features = false }
# libipld-cbor = "0.13.1"
# sp-arithmetic = "5.0.0"
# libipld = { workspace = true, features = ["default", "serde-codec"] }
# getrandom = { version = "0.2.8", default-features = false, features = ["custom"] }

[dev-dependencies]
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]
default = []
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"anyhow/std",
	"cid/std",
	"cid/default",
	"libipld-cbor",
	"sp-io/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
